--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,22 @@
 
 0.1.0: Initial catalog
+
 0.1.1: Fixed a problem with unintended newlines being printing in tsv files.
-0.1.2: Fixed a problem with the coordinates for the Taylor 2001 catalog.
+
+0.1.2: Fixed a problem with the coordinates for the Taylor 2009 catalog.
+
 0.1.3: Changed/added several columns for the new CGPS catalog, to match the descriptions given in the paper.
+
 0.1.4: Found and fixed a mistake in the flux units for the new CGPS catalog, changed to conform to standard.
+
+0.1.5: Large update of metadata to many catalogs added in 0.1.0. Metadata was taken from the text of the papers,
+       where values could be easily found.
+
+0.1.6: Added the Shannahan+2019 'THOR' RMs.
+
+0.1.7: Removed new CGPS (not published yet). 
+    Removed 'Oppermann-sourced' RMs: some were duplicates of other catalogs I processed, some were missing sources for unknown reasons.
+    Corrected Vernstrom 2018 catalog; some declinations were computed wrongly.
+    Added Gaensler 2001 RMs.
+    Added Clarke 2001 RMs; these were not available from the paper, but were supplied by Tracy Clarke. Note these are NOT the Galactic-subtracted RMs, and are NOT the cluster-dispersion added errors.
+    Added Ma 2018 RMs; RMTable was supplied directly by Jackie Ma.
