Updating to-do list for next iteration.

--- a/docs/References.bib
+++ b/docs/References.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Cameron Van Eck at 2024-04-12 15:27:12 +1000 
+%% Created for Cameron Van Eck at 2024-08-20 13:20:29 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,22 +10,24 @@
 
 @article{Vanderwoude2024,
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240315668V},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2024AJ....167..226V},
 	archiveprefix = {arXiv},
 	author = {{Vanderwoude}, S. and {West}, J.~L. and {Gaensler}, B.~M. and {Rudnick}, L. and {Van Eck}, C.~L. and {Thomson}, A.~J.~M. and {Andernach}, H. and {Anderson}, C.~S. and {Carretti}, E. and {Heald}, G.~H. and {Leahy}, J.~P. and {McClure-Griffiths}, N.~M. and {O'Sullivan}, S.~P. and {Tahani}, M. and {Willis}, A.~G.},
-	date-added = {2024-04-12 15:27:09 +1000},
-	date-modified = {2024-04-12 15:27:09 +1000},
-	doi = {10.48550/arXiv.2403.15668},
-	eid = {arXiv:2403.15668},
+	date-added = {2024-08-20 13:20:16 +1000},
+	date-modified = {2024-08-20 13:20:16 +1000},
+	doi = {10.3847/1538-3881/ad2fc8},
+	eid = {226},
 	eprint = {2403.15668},
-	journal = {arXiv e-prints},
-	keywords = {Astrophysics - Astrophysics of Galaxies},
-	month = mar,
-	pages = {arXiv:2403.15668},
+	journal = {\aj},
+	keywords = {Sky surveys, Catalogs, Spectropolarimetry, Polarimetry, Astrophysical magnetism, Galaxy magnetic fields, Extragalactic magnetic fields, 1464, 205, 1973, 1278, 102, 604, 507, Astrophysics - Astrophysics of Galaxies},
+	month = may,
+	number = {5},
+	pages = {226},
 	primaryclass = {astro-ph.GA},
-	title = {{Prototype Faraday rotation measure catalogs from the Polarisation Sky Survey of the Universe's Magnetism (POSSUM) pilot observations}},
+	title = {{Prototype Faraday Rotation Measure Catalogs from the Polarisation Sky Survey of the Universe's Magnetism (POSSUM) Pilot Observations}},
+	volume = {167},
 	year = 2024,
-	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2403.15668}}
+	bdsk-url-1 = {https://doi.org/10.3847/1538-3881/ad2fc8}}
 
 @article{Ranchod2024,
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
